# github-talent-mcp

./: LICENSE  README.md  pyproject.toml  requirements-lock.txt
.claude-plugin/: marketplace.json  plugin.json
src/github_talent_mcp/: __main__.py  github_client.py  models.py  scoring.py  server.py
src/github_talent_mcp/tools/: contributors.py  profile.py  rank.py  search.py
tests/: test_scoring.py  test_search.py
