[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-talent-mcp"
version = "0.1.0"
description = "MCP server for searching, scoring, and ranking GitHub developers for technical recruiting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Carolina Cherry"},
]
keywords = ["mcp", "github", "recruiting", "developer-tools", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0,<2",
    "httpx>=0.27.0,<1",
    "pydantic>=2.0.0,<3",
    "python-dotenv>=1.0.0,<2",
]

[project.urls]
Homepage = "https://github.com/carolinacherry/github-talent-mcp"
Repository = "https://github.com/carolinacherry/github-talent-mcp"
Issues = "https://github.com/carolinacherry/github-talent-mcp/issues"

[project.scripts]
github-talent-mcp = "github_talent_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
